--- a/style_template.css
+++ b/style_template.css
@@ -1,3 +1,36 @@
+
+.container{
+    /* border-color: white; */
+    
+    border:none;
+    border-radius: 4px;
+    /* border-style:solid; */
+    background-color: #393939;
+    margin: 10px 110px 10px 110px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+   
+    
+}
+.title-upper {
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 600;
+    letter-spacing: var(--ls);
+    position: relative; 
+    overflow: hidden;
+    background: var(--bg);
+    
+  }
+
+p{
+   margin: 10px 10px 10px 20px;
+   
+
+}
+
+
 /* Aurora Glow */
 
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;800&display=swap");
@@ -17,7 +50,7 @@
 body {
   min-height: 80vh;
   display: grid;
-  place-items: center;
+  /* place-items: center; */
   background-color: var(--bg);
   color: #fff;
   font-family: "Inter", "DM Sans", Arial, sans-serif;
@@ -270,36 +303,6 @@ body {
 }
 .aurora-glow-button3:hover{
     box-shadow: 0 0 20px #32cd32;
-}
-
-
-/* Upload File */
-label.dragging {
-    border-style: dashed;
-    border-color: #d1d5db;
-  }
-
-/* input field style */
-
-.input-field{
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
-    border: none;
-    border-radius: 10px;
-    background-color: white;
-    width: 300px;
-    height: 30px;
-    padding-left: 20px;
-    margin-left: 620px;
-    margin-top: -30px;
-    position: relative;
-    top: 60px;
-    
-  }
-  .input-field.show {
-    opacity: 1;
-    visibility: visible;
 }
 
 
